--- a/index.html
+++ b/index.html
@@ -6,6 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Café Borjas</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+
+    <style>
+        /* Animación para las tarjetas al hacer hover */
+        .card {
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+        }
+
+        .card:hover {
+            transform: translateY(-10px);
+            box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
+        }
+    </style>
 </head>
 
 <body>
@@ -245,12 +257,34 @@
     </section>
 
     <!-- Botón para volver arriba -->
-    <a href="#" class="btn btn-primary btn-lg" style="position: fixed; bottom: 20px; right: 20px; background-color: #6a4e3f;">Volver arriba</a>
+    <a href="#" class="btn btn-primary btn-lg" style="position: fixed; bottom: 20px; right: 20px; ">TOP</a>
 
     <!-- Footer -->
-    <footer class="text-center text-white py-4" style="background-color: #6a4e3f;">
-        <p>&copy; 2023 Café Borjas. Todos los derechos reservados.</p>
-    </footer>
+<footer class="text-center text-white" style="background-color: #6a4e3f;">
+    <div class="container p-4">
+        <section class="mb-4">
+            <h4>Síguenos en nuestras redes sociales</h4>
+            <a href="https://www.facebook.com/" target="_blank" class="btn btn-outline-light btn-floating m-1" role="button">
+                <img src="imagenes/facebook.png" alt="Facebook" style="width: 24px; height: 24px;">
+            </a>
+            <a href="https://www.instagram.com/" target="_blank" class="btn btn-outline-light btn-floating m-1" role="button">
+                <img src="imagenes/instagram.png" alt="Instagram" style="width: 24px; height: 24px;">
+            </a>
+            <a href="https://x.com/" target="_blank" class="btn btn-outline-light btn-floating m-1" role="button">
+                <img src="imagenes/twitter.png" alt="Twitter" style="width: 24px; height: 24px;">
+            </a>
+        </section>
+        <section class="mb-4">
+            <p>
+                Con más de 50 años ofreciendo el mejor café en el corazón de Tegucigalpa, somos tu lugar de encuentro favorito.
+            </p>
+        </section>
+        <div class="text-center p-3">
+            &copy; 2024 Café Borjas. Todos los derechos reservados.
+        </div>
+    </div>
+</footer>
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     
